fixed issue in ItemHandler #482